
   - Let the user records any document with any table (todo #1263).     
   - DossierManager: better behaves when the list is empty, disabling all unrelevant actions.
   - DossierManager: no more have two identical 'Close' buttons.
   - Entries and reconciliations: optimize loading (todo #1292).
   - Entries have now a rule indicator to distinguish forward and closing entries (todo #1228).
   - ExerciceMetaBin: no more force a new dossier to have a current exercice.

 Bug fixes:

   - myISettings: fix free_groups() behavior when groups list is NULL.
   - ofaEntryProperties: let the user close the dialog.
   - ofaExerciceTreeview: fix the update when no dossier is selected.
   - ofaIDBDossierMeta, ofaIDBExerciceMeta: fix refs management.

 Other changes:

   - ofaEntryStore: is now loaded at once.
   - ofa_idbdossier_meta_unref(): removed function.
   - ofa_idbexercice_meta_unref(): removed function.
   - ofaIGetter: the header only includes class definitions (not the APIs).
   - ofeEntryStatus: type renamed from ofaEntryStatus (as an enum).

-----------------------------------------------------------------------
 Version 0.66
 ============

 Released on 2017-02-05

 Total files count:    779
 Total lines count: 511208

 New features and improvements:

   - DossierManager: be able to close the currently opened dossier (todo #1338).
   - Recovery: new assistant to import datas from other softwares (todo #1260).
   - Review and harmonize standard actions on dossier open (todo #1300, todo #1322).

 Bug fixes:

   - 

 Other changes:

   - myIScopeMap: is renamed from myIActionMap.
   - myScopeMapper: new class.
   - ofaDossierPrefs: deprecated class.
   - ofaDossierStore: is now owned by #ofaHub (todo #1343). 
   - ofa_extender_collection_get_for_type(): does not return a new ref (todo #1341).
   - ofaExtenderModule: review loading/unloading the library.
   - ofaExtension: improve API v2.