@@ -28,6 +28,7 @@
    - DossierManager: no more have two identical 'Close' buttons.
    - Entries and reconciliations: optimize loading (todo #1292).
    - Entries have now a rule indicator to distinguish forward and closing entries (todo #1228).
+   - ExerciceCloseAssistant: close the opened pages before working.
    - ExerciceMetaBin: no more force a new dossier to have a current exercice.
 
  Bug fixes:
